# DATAVIA

./: CMakeLists.txt  DiskListTool.cpp  DiskSectorCRC.cpp  DiskSectorCRC.h  DiskUtils.cpp  DiskUtils.h  ENHANCED_FEATURES.md  EnhancedDiskSectorCRC.cpp  EnhancedDiskSectorCRC.h  FINAL_OPTIMIZATION_REPORT.md  FINAL_PROJECT_SUMMARY.md  FileSystemCRC.cpp  FileSystemCRC.h  FinalUltimateOptimizedGUI.cpp  FixedDiskAccess.cpp  GUIWindow.cpp  GUIWindow.h  GUIWindowOptimized.cpp  HighPerformance4096.cpp  HighPerformanceCRC.cpp  HighPerformanceCRC.h  LICENSE  OPTIMIZATION_SUMMARY.md  OptimizedDiskAccess.cpp  OptimizedDiskReader.cpp  OptimizedDiskReader.h  PERFORMANCE_ANALYSIS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  PerformanceDiagnostic.cpp  PerformanceTestScript.cpp  README.md  SimplePerformanceTest.cpp  USAGE_GUIDE.md  UltimateOptimizedGUI.cpp  main.cpp  main_gui.cpp
